2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadSymbolicLink(), which takes an intelligent approach
	  to reading symlinks (since their contents may be any size, we grow the
	  buffer dynamically to fit them all, instead of assuming a maximum size).
	* UnixSymbolicLinkInfo.cs: Remove MaxContentsSize.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add check for when symlink points to a full path name.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Fix Object.Equals implementations.
	* UnixPath.cs: New & improved, with Testing!  GetRealPath() is changed so
	  that it doesn't walk the entire path looking for symlinks, it just reads 
	  the leaf.  GetCompletRealPath() walks the entire path resolving symlinks.
	  GetCanonicalPath() added, which "cleans up" a path (removing extraneous
	  "." and ".." entries).
	* UnixSymbolicLinkInfo.cs: Rename ContentsLength -> MaxContentsSize.

2004-12-28  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Add a link(2) wrapper, CreateLink().  Strictly
	  speaking it's only "safe" to do this on files, but an exception will be 
	  returned if the user tries to hard link directories (because of EPERM), 
	  unless the user is root, in which case it should be allowed anyway...

2004-12-28  Jonathan Pryor <jonpryor@vt.edu>

	* CdeclFunctions.cs: Correct the comments for AMD64
	* UnixDirectoryInfo.cs: override Name; add Parent & Root properties; 
	  Correct Path usage (s/Path/FullPath/g).
	* UnixDriveInfo.cs: Added.  Based on .NET 2.0 System.IO.DriveInfo docs,
	  provides statvfs(2) and getfsfile(3) information about a mounted volume.
	  GetDrives() wraps getfsent(3), thus parsing /etc/fstab.
	* UnixFile.cs: Use UnixConver.ToOpenFlags, deleting the local version.
	* UnixFileInfo.cs: Use UnixConver.ToOpenFlags, deleting the local version;
	  override Name; add DirectoryName and Directory properties; 
	* UnixFileSystemInfo.cs: Make more .NET-like, using FullPath and